refactor: adjust names according to rule 3.3 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="content">
-      <p id="top-section-for-adding-element-to-list">
+      <p id="new-task-title">
         <label for="new-task">Add Item</label>
         <div class="new-task-input">
           <input id="new-task"class="task" type="text">
