--- a/index.html
+++ b/index.html
@@ -5,44 +5,44 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="page">
     <div class="header">
-      <img src="./eisenhower-matrix.jpg">
-      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <img src="./eisenhower-matrix.jpg" class="header-image">
+      <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="content">
       <p id="new-task-title">
-        <label for="new-task">Add Item</label>
+        <label for="new-task" class="new-task-label tasks-title">Add Item</label>
         <div class="new-task-input">
-          <input id="new-task"class="task" type="text">
-          <button>Add</button>
+          <input id="new-task"class="task task-input" type="text">
+          <button class="button">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
+      <h3 class="tasks-title">Todo</h3>
       <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+        <li class="task-item">
+          <input type="checkbox" class="task-item__checkbox">
+          <label class="task task-item__label">Pay Bills</label>
+          <input type="text" class="task task-input task-item__input">
+          <button class="edit button">Edit</button>
+          <button class="delete button"><img src="./remove.svg"></button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete"><img src="./remove.svg"></button>
+        <li class="task-item edit-mode">
+          <input type="checkbox" class="task-item__checkbox">
+          <label class="task task-item__label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task task-input task-item__input">
+          <button class="edit button">Save</button>
+          <button class="delete button"><img src="./remove.svg"></button>
         </li>
       </ul>
-      <h3>Completed</h3>
+      <h3 class="tasks-title">Completed</h3>
       <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+        <li class="task-item">
+          <input type="checkbox" class="task-item__checkbox" checked>
+          <label class="task task-item-label">See the Doctor</label>
+          <input type="text" class="task task-input task-item__input">
+          <button class="edit button">Edit</button>
+          <button class="delete button"><img src="./remove.svg"></button>
         </li>
       </ul>
     </div>
