--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <ul id="completed-tasks">
         <li class="task-item">
           <input type="checkbox" class="task-item__checkbox" checked>
-          <label class="task task-item-label">See the Doctor</label>
+          <label class="task task-item__label">See the Doctor</label>
           <input type="text" class="task task-input task-item__input">
           <button class="edit button">Edit</button>
           <button class="delete button"><img src="./remove.svg"></button>
