--- a/index.html
+++ b/index.html
@@ -6,46 +6,52 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="page">
-    <div class="header">
+    <header class="header">
       <img src="./eisenhower-matrix.jpg" class="header-image">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="content">
-      <p id="new-task-title">
-        <label for="new-task" class="new-task-label tasks-title">Add Item</label>
-        <div class="new-task-input">
-          <input id="new-task"class="task task-input" type="text">
-          <button class="button">Add</button>
-        </div>
-      </p>
-      <h3 class="tasks-title">Todo</h3>
-      <ul id="incomplete-tasks">
-        <li class="task-item">
-          <input type="checkbox" class="task-item__checkbox">
-          <label class="task task-item__label">Pay Bills</label>
-          <input type="text" class="task task-input task-item__input">
-          <button class="edit button">Edit</button>
-          <button class="delete button"><img src="./remove.svg"></button>
-        </li>
-        <li class="task-item edit-mode">
-          <input type="checkbox" class="task-item__checkbox">
-          <label class="task task-item__label">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task task-input task-item__input">
-          <button class="edit button">Save</button>
-          <button class="delete button"><img src="./remove.svg"></button>
-        </li>
-      </ul>
-      <h3 class="tasks-title">Completed</h3>
-      <ul id="completed-tasks">
-        <li class="task-item">
-          <input type="checkbox" class="task-item__checkbox" checked>
-          <label class="task task-item__label">See the Doctor</label>
-          <input type="text" class="task task-input task-item__input">
-          <button class="edit button">Edit</button>
-          <button class="delete button"><img src="./remove.svg"></button>
-        </li>
-      </ul>
-    </div>
+    </header>
+    <main class="content">
+      <section>
+        <p id="new-task-title">
+          <label for="new-task" class="new-task__label tasks-title">Add Item</label>
+          <div class="new-task-input">
+            <input id="new-task"class="task task-input" type="text">
+            <button class="button">Add</button>
+          </div>
+        </p>
+      </section>
+      <section>
+        <h3 class="tasks-title">Todo</h3>
+        <ul id="incomplete-tasks">
+          <li class="task-item">
+            <input type="checkbox" class="task-item__checkbox">
+            <label class="task task-item__label">Pay Bills</label>
+            <input type="text" class="task task-input task-item__input">
+            <button class="edit button">Edit</button>
+            <button class="delete button"><img src="./remove.svg"></button>
+          </li>
+          <li class="task-item edit-mode">
+            <input type="checkbox" class="task-item__checkbox">
+            <label class="task task-item__label">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="task task-input task-item__input">
+            <button class="edit button">Save</button>
+            <button class="delete button"><img src="./remove.svg"></button>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h3 class="tasks-title">Completed</h3>
+        <ul id="completed-tasks">
+          <li class="task-item">
+            <input type="checkbox" class="task-item__checkbox" checked>
+            <label class="task task-item__label">See the Doctor</label>
+            <input type="text" class="task task-input task-item__input">
+            <button class="edit button">Edit</button>
+            <button class="delete button"><img src="./remove.svg"></button>
+          </li>
+        </ul>
+      </section>
+    </main>
     <script SRC="app.js"></script>
   </body>
 </html>
