--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="page">
     <header class="header">
-      <img src="./eisenhower-matrix.jpg" class="header-image">
+      <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix" class="header-image">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="content">
@@ -28,14 +28,14 @@
             <label class="task task-item__label">Pay Bills</label>
             <input type="text" class="task task-input task-item__input">
             <button class="edit button">Edit</button>
-            <button class="delete button"><img src="./remove.svg"></button>
+            <button class="delete button"><img src="./remove.svg" alt="Remove icon"></button>
           </li>
           <li class="task-item edit-mode">
             <input type="checkbox" class="task-item__checkbox">
             <label class="task task-item__label">Go Shopping</label>
             <input type="text" value="Go Shopping" class="task task-input task-item__input">
             <button class="edit button">Save</button>
-            <button class="delete button"><img src="./remove.svg"></button>
+            <button class="delete button"><img src="./remove.svg" alt="Remove icon"></button>
           </li>
         </ul>
       </section>
@@ -47,7 +47,7 @@
             <label class="task task-item__label">See the Doctor</label>
             <input type="text" class="task task-input task-item__input">
             <button class="edit button">Edit</button>
-            <button class="delete button"><img src="./remove.svg"></button>
+            <button class="delete button"><img src="./remove.svg" alt="Remove icon"></button>
           </li>
         </ul>
       </section>
