--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   </head>
   <body class="page">
     <header class="header">
-      <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix" class="header-image">
-      <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix" class="header__image">
+      <a class="header__more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="content">
       <section>
-        <p id="new-task-title">
+        <p>
           <label for="new-task" class="new-task__label tasks-title">Add Item</label>
-          <div class="new-task-input">
-            <input id="new-task"class="task task-input" type="text">
+          <div class="new-task__wrapper">
+            <input id="new-task"class="task task-input new-task__input" type="text">
             <button class="button">Add</button>
           </div>
         </p>
@@ -28,14 +28,14 @@
             <label class="task task-item__label">Pay Bills</label>
             <input type="text" class="task task-input task-item__input">
             <button class="edit button">Edit</button>
-            <button class="delete button"><img src="./remove.svg" alt="Remove icon"></button>
+            <button class="delete button"><img src="./remove.svg" alt="Remove icon" class="task-item__delete-icon"></button>
           </li>
           <li class="task-item edit-mode">
             <input type="checkbox" class="task-item__checkbox">
             <label class="task task-item__label">Go Shopping</label>
             <input type="text" value="Go Shopping" class="task task-input task-item__input">
             <button class="edit button">Save</button>
-            <button class="delete button"><img src="./remove.svg" alt="Remove icon"></button>
+            <button class="delete button"><img src="./remove.svg" alt="Remove icon" class="task-item__delete-icon"></button>
           </li>
         </ul>
       </section>
@@ -44,10 +44,10 @@
         <ul id="completed-tasks">
           <li class="task-item">
             <input type="checkbox" class="task-item__checkbox" checked>
-            <label class="task task-item__label">See the Doctor</label>
+            <label class="task task-item__label completed-tasks__label">See the Doctor</label>
             <input type="text" class="task task-input task-item__input">
             <button class="edit button">Edit</button>
-            <button class="delete button"><img src="./remove.svg" alt="Remove icon"></button>
+            <button class="delete button"><img src="./remove.svg" alt="Remove icon" class="task-item__delete-icon"></button>
           </li>
         </ul>
       </section>
