refactor: adjust semantic tags according to rule 1.1 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     </header>
     <main class="content">
       <section>
-        <p>
+        <div class="new-task">
           <label for="new-task" class="new-task__label tasks-title">Add Item</label>
           <div class="new-task__wrapper">
             <input id="new-task"class="task task-input new-task__input" type="text">
             <button class="button">Add</button>
           </div>
-        </p>
+        </div>
       </section>
       <section>
         <h3 class="tasks-title">Todo</h3>
