--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
         </ul>
       </section>
     </main>
-    <script SRC="app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
